--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cors": "2.8.5",
     "cross-env": "7.0.3",
     "dotenv": "^16.0.3",
+    "emoji-picker-react": "^4.4.7",
     "express": "4.17.1",
     "formik": "^2.2.9",
     "framer-motion": "^9.0.4",
