--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-scripts": "5.0.1",
     "react-scroll-to-bottom": "^4.2.0",
     "react-spinners": "^0.13.8",
+    "react-toastify": "^9.1.1",
     "redux-persist": "^6.0.0",
     "socket.io": "^4.6.1",
     "socket.io-client": "^4.6.1",
